--- a/website/blog/2019-09-16-1.19.0.md
+++ b/website/blog/2019-09-16-1.19.0.md
@@ -1,3 +1,17 @@
+---
+author: Lucas Duailibe (@duailibe)
+authorURL: https://github.com/duailibe
+title: "Prettier 1.19: what what what what"
+---
+
+This release includes lots of stuff
+
+<!--truncate-->
+
+## Highlights
+
+## Other changes
+
 ### JavaScript
 
 #### More readable parentheses for new-call ([#6412] by [@bakkot])
