--- a/website/blog/2019-09-16-1.19.0.md
+++ b/website/blog/2019-09-16-1.19.0.md
@@ -497,7 +497,7 @@ Previously, Prettier would sometimes ignore whitespace when formatting comments.
 </div>
 ```
 
-### Handlebars: Improve comment formatting ([#6234] by [@gavinjoyce])
+#### Improve comment formatting ([#6234] by [@gavinjoyce])
 
 Previously, Prettier would incorrectly decode HTML entiites.
 
