update blog post

--- a/website/blog/2019-09-16-1.19.0.md
+++ b/website/blog/2019-09-16-1.19.0.md
@@ -34,7 +34,7 @@ var a = new (x().y.z)();
 var a = new (x().y().z)();
 ```
 
-#### Update ?? precedence to match stage 3 proposal ([#6404] by [@vjeux])
+#### Update `??` precedence to match stage 3 proposal ([#6404] by [@vjeux])
 
 We've updated Prettier's support for the nullish coalescing operator to match a spec update that no longer allows it to immediately contain, or be contained within an `&&` or `||` operation.
 
