--- a/website/blog/2019-09-16-1.19.0.md
+++ b/website/blog/2019-09-16-1.19.0.md
@@ -4,11 +4,25 @@ authorURL: https://github.com/duailibe
 title: "Prettier 1.19: what what what what"
 ---
 
-This release includes lots of stuff
+This release includes as asual lots of fixes and improvements, but most importantly includes a feature very requested by the Vue community to indent `script` and `style` tags contents and a flag `--only-changed` to speed up Prettier CLI runs.
 
 <!--truncate-->
 
 ## Highlights
+
+### Vue
+
+#### Indent `script` and `style` tags with `--vue-indent-script-and-style` ([#6157] by [@kamilic])
+
+After a lot of requests we now have an option to indent the contents of `style` and `script` tags.
+
+Refer to the [documentation](https://prettier.io/docs/en/options.html#vue-files-script-and-style-tags-indentation) for more information.
+
+### CLI
+
+#### Add `--only-changed` flag ([#5910] by [@g-harel])
+
+Flag used with `--write` to avoid re-checking files that were not changed since they were last written (with the same formatting configuration).
 
 ## Other changes
 
@@ -519,11 +533,9 @@ Previously, Prettier would incorrectly decode HTML entiites.
 </p>
 ```
 
-#### CLI: Add `--only-changed` flag ([#5910] by [@g-harel])
+### Vue
 
-Flag used with `--write` to avoid re-checking files that were not changed since they were last written (with the same formatting configuration).
-
-#### HTML, Vue: Don't break the template element included in a line shorter than print-width([#6284] by [@sosukesuzuki])
+#### Don't break the template element included in a line shorter than print width ([#6284] by [@sosukesuzuki])
 
 Previously, even if the line length is shorter than print-width is Prettier breaks the line with a template element.
 
@@ -547,7 +559,9 @@ Previously, even if the line length is shorter than print-width is Prettier brea
 </template>
 ```
 
-#### HTML: Script tags are now treated as blocks for the purposes of formatting ([#6423] by [@thorn0])
+### HTML
+
+#### Script tags are now treated as blocks for the purposes of formatting ([#6423] by [@thorn0])
 
 Previously, in the [whitespace-sensitive mode](https://prettier.io/docs/en/options.html#html-whitespace-sensitivity), they were formatted as if they were inline.
 
@@ -575,6 +589,7 @@ Previously, in the [whitespace-sensitive mode](https://prettier.io/docs/en/optio
 ```
 
 [#5910]: https://github.com/prettier/prettier/pull/5910
+[#6157]: https://github.com/prettier/prettier/pull/6157
 [#6186]: https://github.com/prettier/prettier/pull/6186
 [#6206]: https://github.com/prettier/prettier/pull/6206
 [#6209]: https://github.com/prettier/prettier/pull/6209
@@ -582,23 +597,24 @@ Previously, in the [whitespace-sensitive mode](https://prettier.io/docs/en/optio
 [#6234]: https://github.com/prettier/prettier/pull/6234
 [#6236]: https://github.com/prettier/prettier/pull/6236
 [#6270]: https://github.com/prettier/prettier/pull/6270
-[#6289]: https://github.com/prettier/prettier/pull/6289
-[#6332]: https://github.com/prettier/prettier/pull/6332
 [#6284]: https://github.com/prettier/prettier/pull/6284
+[#6289]: https://github.com/prettier/prettier/pull/6289
 [#6301]: https://github.com/prettier/prettier/pull/6301
 [#6307]: https://github.com/prettier/prettier/pull/6307
+[#6332]: https://github.com/prettier/prettier/pull/6332
 [#6340]: https://github.com/prettier/prettier/pull/6340
-[#6412]: https://github.com/prettier/prettier/pull/6412
-[#6423]: https://github.com/prettier/prettier/pull/6423
-[#6420]: https://github.com/prettier/prettier/pull/6420
 [#6411]: https://github.com/prettier/prettier/pull/6411
+[#6412]: https://github.com/prettier/prettier/pull/6412
+[#6420]: https://github.com/prettier/prettier/pull/6420
+[#6423]: https://github.com/prettier/prettier/pull/6423
 [#6438]: https://github.com/prettier/prettier/pull/6411
 [#6441]: https://github.com/prettier/prettier/pull/6441
 [#6446]: https://github.com/prettier/prettier/pull/6446
-[@duailibe]: https://github.com/duailibe
-[@gavinjoyce]: https://github.com/gavinjoyce
-[@sosukesuzuki]: https://github.com/sosukesuzuki
-[@g-harel]: https://github.com/g-harel
-[@jounqin]: https://github.com/JounQin
 [@bakkot]: https://gibhub.com/bakkot
+[@duailibe]: https://github.com/duailibe
+[@g-harel]: https://github.com/g-harel
+[@gavinjoyce]: https://github.com/gavinjoyce
+[@jounqin]: https://github.com/JounQin
+[@kamilic]: https://github.com/kamilic
+[@sosukesuzuki]: https://github.com/sosukesuzuki
 [@thorn0]: https://github.com/thorn0
