--- a/website/blog/2019-09-16-1.19.0.md
+++ b/website/blog/2019-09-16-1.19.0.md
@@ -282,6 +282,71 @@ useEffect(
 );
 ```
 
+#### Fix bad formatting for multi-line optional chaining with comment ([#6506] by [@sosukesuzuki])
+
+<!-- prettier-ignore -->
+```js
+// Input
+return a
+  .b()
+  .c()
+  // Comment
+  ?.d();
+
+// Prettier (stable)
+return a
+  .b()
+  .c()
+  ?.// Comment
+  d();
+
+// Prettier (master)
+return (
+  a
+    .b()
+    .c()
+    // Comment
+    ?.d();
+);
+```
+
+#### Fix inconsistent indentation in switch statement ([#6514] by [@sosukesuzuki])
+
+<!-- prettier-ignore -->
+```js
+// Input
+switch ($veryLongAndVeryVerboseVariableName && $anotherVeryLongAndVeryVerboseVariableName) {
+}
+
+switch ($longButSlightlyShorterVariableName && $anotherSlightlyShorterVariableName) {
+}
+
+// Prettier (stable)
+switch (
+  $veryLongAndVeryVerboseVariableName &&
+    $anotherVeryLongAndVeryVerboseVariableName
+) {
+}
+
+switch (
+  $longButSlightlyShorterVariableName && $anotherSlightlyShorterVariableName
+) {
+}
+
+// Prettier (master)
+switch (
+  $veryLongAndVeryVerboseVariableName &&
+  $anotherVeryLongAndVeryVerboseVariableName
+) {
+}
+
+switch (
+  $longButSlightlyShorterVariableName &&
+  $anotherSlightlyShorterVariableName
+) {
+}
+```
+
 ### TypeScript
 
 #### Print comment following a JSX element with generic ([#6209] by [@duailibe])
@@ -360,6 +425,22 @@ type FooBar<T> = {
 type FooBar<T> = {
   [P in keyof T]: T[P] extends Something ? Something<T[P]> : T[P];
 };
+```
+
+#### Keep type parameters inline for a type annotation of variable declaration ([#6467] by [@sosukesuzuki])
+
+<!-- prettier-ignore -->
+```ts
+// Input
+const fooooooooooooooo: SomeThing<boolean> = looooooooooooooooooooooooooooooongNameFunc();
+
+// Prettier (stable)
+const fooooooooooooooo: SomeThing<
+  boolean
+> = looooooooooooooooooooooooooooooongNameFunc();
+
+// Prettier (master)
+const fooooooooooooooo: SomeThing<boolean> = looooooooooooooooooooooooooooooongNameFunc();
 ```
 
 ### MDX
@@ -610,6 +691,9 @@ Previously, in the [whitespace-sensitive mode](https://prettier.io/docs/en/optio
 [#6438]: https://github.com/prettier/prettier/pull/6411
 [#6441]: https://github.com/prettier/prettier/pull/6441
 [#6446]: https://github.com/prettier/prettier/pull/6446
+[#6467]: https://github.com/prettier/prettier/pull/6467
+[#6506]: https://github.com/prettier/prettier/pull/6506
+[#6514]: https://github.com/prettier/prettier/pull/6514
 [@bakkot]: https://gibhub.com/bakkot
 [@duailibe]: https://github.com/duailibe
 [@g-harel]: https://github.com/g-harel
