--- a/website/blog/2019-09-25-1.19.0.md
+++ b/website/blog/2019-09-25-1.19.0.md
@@ -1,7 +1,7 @@
 ---
 author: Lucas Duailibe (@duailibe)
 authorURL: https://github.com/duailibe
-title: "Prettier 1.19: what what what what"
+title: "Prettier 1.19: Vue script and style indentation, and skipping unchanged files"
 ---
 
 This release includes as asual lots of fixes and improvements, but most importantly includes a feature very requested by the Vue community to indent `script` and `style` tags contents and a flag `--only-changed` to speed up Prettier CLI runs.
