--- a/website/blog/2019-09-25-1.19.0.md
+++ b/website/blog/2019-09-25-1.19.0.md
@@ -443,6 +443,30 @@ const fooooooooooooooo: SomeThing<
 const fooooooooooooooo: SomeThing<boolean> = looooooooooooooooooooooooooooooongNameFunc();
 ```
 
+#### Don't breakup call expressions when the last argument is an `as` type expression wrapping a simple expression ([#6471] by [@mattleff])
+Previously, when Prettier formatted a call expression containing an `as` type expression or a type assertion, it would break the line. Now, Prettier uses the expression contained by the `as` type or type assertion to determine line breaks.
+
+<!-- prettier-ignore -->
+```ts
+// Input
+const bar = [1,2,3].reduce((carry, value) => {
+  return [...carry, value];
+}, ([] as unknown) as number[]);
+
+// Prettier (stable)
+const bar = [1, 2, 3].reduce(
+  (carry, value) => {
+    return [...carry, value];
+  },
+  ([] as unknown) as number[]
+);
+
+// Prettier (master)
+const bar = [1,2,3].reduce((carry, value) => {
+  return [...carry, value];
+}, ([] as unknown) as number[]);
+```
+
 ### MDX
 
 #### Fix text with whitespace after JSX trim incorrectly ([#6340] by [@JounQin])
@@ -692,6 +716,7 @@ Previously, in the [whitespace-sensitive mode](https://prettier.io/docs/en/optio
 [#6441]: https://github.com/prettier/prettier/pull/6441
 [#6446]: https://github.com/prettier/prettier/pull/6446
 [#6467]: https://github.com/prettier/prettier/pull/6467
+[#6471]: https://github.com/prettier/prettier/pull/6471
 [#6506]: https://github.com/prettier/prettier/pull/6506
 [#6514]: https://github.com/prettier/prettier/pull/6514
 [@bakkot]: https://gibhub.com/bakkot
@@ -700,5 +725,6 @@ Previously, in the [whitespace-sensitive mode](https://prettier.io/docs/en/optio
 [@gavinjoyce]: https://github.com/gavinjoyce
 [@jounqin]: https://github.com/JounQin
 [@kamilic]: https://github.com/kamilic
+[@mattleff]: https://github.com/mattleff
 [@sosukesuzuki]: https://github.com/sosukesuzuki
 [@thorn0]: https://github.com/thorn0
