--- a/website/blog/2019-09-25-1.19.0.md
+++ b/website/blog/2019-09-25-1.19.0.md
@@ -243,7 +243,7 @@ foo // comment
 
 #### Fix moving comments in function calls like `useEffect` second argument ([#6270] by [@sosukesuzuki])
 
-This fixes a bug that was affecting function calls that have a arrow function as first argument and an array expression as second argument, such as the common React's `useEffect`. A comment in its own line before the second argument would be moved to the line above.
+This fixes a bug that was affecting function calls that have an arrow function as first argument and an array expression as second argument, such as the common React's `useEffect`. A comment in its own line before the second argument would be moved to the line above.
 
 The bug was only present when using the Flow and TypeScript parsers.
 
