--- a/website/blog/2019-09-25-1.19.0.md
+++ b/website/blog/2019-09-25-1.19.0.md
@@ -4,7 +4,7 @@ authorURL: https://github.com/duailibe
 title: "Prettier 1.19: Vue script and style indentation, and skipping unchanged files"
 ---
 
-This release includes as asual lots of fixes and improvements, but most importantly includes a feature very requested by the Vue community to indent `script` and `style` tags contents and a flag `--only-changed` to speed up Prettier CLI runs.
+This release includes as usual lots of fixes and improvements, but most importantly includes a feature much requested by the Vue community to indent `script` and `style` tags' contents and a flag `--only-changed` to speed up Prettier CLI runs.
 
 <!--truncate-->
 
