--- a/website/blog/2019-09-25-1.19.0.md
+++ b/website/blog/2019-09-25-1.19.0.md
@@ -643,7 +643,7 @@ Previously, Prettier would incorrectly decode HTML entiites.
 
 #### Don't break the template element included in a line shorter than print width ([#6284] by [@sosukesuzuki])
 
-Previously, even if the line length is shorter than print-width is Prettier breaks the line with a template element.
+Previously, even if the line length is shorter than print-width, Prettier broke the line with a template element.
 
 <!-- prettier-ignore -->
 ```html
