--- a/website/blog/2018-11-07-1.15.0.md
+++ b/website/blog/2018-11-07-1.15.0.md
@@ -37,7 +37,7 @@ As you may notice during daily HTML works, the following two cases won't produce
 | with spaces    | `1<b> 2 </b>3` | 1<b> 2 </b>3 |
 | without spaces |  `1<b>2</b>3`  |  1<b>2</b>3  |
 
-This is because whitespaces are sensitive in inline elements.
+This happens because whitespaces are significant in inline elements.
 
 For this reason, we cannot safely format
 
@@ -59,8 +59,8 @@ since it may modify the displayed output in the browser.
 
 Instead of breaking your code or just doing nothing, we introduce _whitespace-sensitive formatting_, which:
 
-- follows the default CSS `display` value for every element to identify if the whitespace is sensitive,
-- and borrows the opening or closing tags (if necessary) to avoid adding or removing sensitive whitespaces.
+- follows the default CSS `display` value for every element to identify if the whitespace is significant,
+- and borrows the opening or closing tags (if necessary) to avoid adding or removing significant whitespaces.
 
 For example:
 
@@ -81,7 +81,7 @@ For example:
 </div>
 ```
 
-We also allow magic comments (e.g., `<!-- display: block -->`) to tell Prettier how to format this element
+We also allow magic comments (e.g., `<!-- display: block -->`) to tell Prettier how to format elements
 due to the fact that CSS display can be changed:
 
 <!-- prettier-ignore -->
@@ -103,8 +103,8 @@ in case you may want maximum safety or you just don't care about those whitespac
 `--html-whitespace-sensitivity` (defaults to `css`)
 
 - `css` - Respect the default value of CSS `display` property.
-- `strict` - Whitespaces are considered sensitive.
-- `ignore` - Whitespaces are considered insensitive.
+- `strict` - All whitespaces are considered significant.
+- `ignore` - All whitespaces are considered insignificant.
 
 ##### Automatic parser inference
 
