--- a/website/blog/2018-11-07-1.15.0.md
+++ b/website/blog/2018-11-07-1.15.0.md
@@ -37,7 +37,7 @@ As you may notice during daily HTML works, the following two cases won't produce
 | with spaces    | `1<b> 2 </b>3` | 1<b> 2 </b>3 |
 | without spaces |  `1<b>2</b>3`  |  1<b>2</b>3  |
 
-This happens because whitespaces are significant in inline elements.
+This happens because whitespace is significant in inline elements.
 
 For this reason, we cannot safely format
 
@@ -59,8 +59,8 @@ since it may modify the displayed output in the browser.
 
 Instead of breaking your code or just doing nothing, we introduce _whitespace-sensitive formatting_, which:
 
-- follows the default CSS `display` value for every element to identify if the whitespace is significant,
-- and borrows the opening or closing tags (if necessary) to avoid adding or removing significant whitespaces.
+- follows the default CSS `display` value for every element to identify if the whitespace inside it is significant,
+- and borrows the opening or closing tags (if necessary) to avoid adding or removing significant whitespace.
 
 For example:
 
@@ -98,13 +98,13 @@ due to the fact that CSS display can be changed:
 ```
 
 There's also an option for the global whitespace sensitivity
-in case you may want maximum safety or you just don't care about those whitespaces:
+in case you may want maximum safety or you just don't care about that whitespace:
 
 `--html-whitespace-sensitivity` (defaults to `css`)
 
 - `css` - Respect the default value of CSS `display` property.
-- `strict` - All whitespaces are considered significant.
-- `ignore` - All whitespaces are considered insignificant.
+- `strict` - All whitespace is considered significant.
+- `ignore` - All whitespace is considered insignificant.
 
 ##### Automatic parser inference
 
