one more rewording

--- a/website/blog/2018-11-07-1.15.0.md
+++ b/website/blog/2018-11-07-1.15.0.md
@@ -60,7 +60,7 @@ since it may modify the displayed output in the browser.
 Instead of breaking your code or just doing nothing, we introduce _whitespace-sensitive formatting_, which:
 
 - follows the default CSS `display` value for every element to identify if the whitespace inside it is significant,
-- and borrows the opening or closing tags (if necessary) to avoid adding or removing significant whitespace.
+- and wraps the tags in such a way as to avoid adding or removing significant whitespace.
 
 For example:
 
