--- a/website/blog/2019-09-30-1.19.0.md
+++ b/website/blog/2019-09-30-1.19.0.md
@@ -64,7 +64,7 @@ foo ?? baz || baz;
 (foo ?? baz) || baz;
 ```
 
-Please note, as we update our parsers with versions that support this spec update, code without the parenthesis will throw a parse error.
+Please note that since we have updated our parsers with versions that support this spec update, code without the parentheses will throw a parse error.
 
 #### Fix ugly formatting on object destructuring with parameter decorators ([#6411] by [@sosukesuzuki])
 
