Add more pull requests

--- a/website/blog/2019-11-03-1.19.0.md
+++ b/website/blog/2019-11-03-1.19.0.md
@@ -350,6 +350,31 @@ export class User {
 }
 ```
 
+#### Improve argument expansion with `as` type expressions ([#6471] by [@mattleff])
+
+Previously, when Prettier formatted a call expression containing an `as` type expression or a type assertion, it would break the line. Now, Prettier uses the expression contained by the `as` type or type assertion to determine line breaks.
+
+<!-- prettier-ignore -->
+```ts
+// Input
+const bar = [1,2,3].reduce((carry, value) => {
+  return [...carry, value];
+}, ([] as unknown) as number[]);
+
+// Prettier 1.18
+const bar = [1, 2, 3].reduce(
+  (carry, value) => {
+    return [...carry, value];
+  },
+  ([] as unknown) as number[]
+);
+
+// Prettier 1.19
+const bar = [1,2,3].reduce((carry, value) => {
+  return [...carry, value];
+}, ([] as unknown) as number[]);
+```
+
 ### TypeScript/Flow
 
 #### Fix indentation for union types inside tuples ([#6381] by [@squidfunk], [#6605] by [@thorn0])
@@ -1012,6 +1037,48 @@ Previously, Prettier only supported the most common HTML entities, such as `&nbs
 <p>Hi&excl;</p>
 ```
 
+#### Add JSON script types ([#6293] by [@ascorbic])
+
+<!-- prettier-ignore-->
+```html
+<!-- Input -->
+<script type="application/json">
+  {   "json":true  }
+</script>
+<script type="importmap">
+  {   "json":true  }
+  {   "json":true  }
+</script>
+</script>
+<script type="systemjs-importmap">
+  {   "json":true  }
+</script>
+
+<!-- Prettier 1.18 -->
+<script type="application/json">
+  {   "json":true  }
+</script>
+<script type="importmap">
+  {   "json":true  }
+  {   "json":true  }
+</script>
+</script>
+<script type="systemjs-importmap">
+  {   "json":true  }
+</script>
+
+<!-- Prettier 1.19 -->
+<script type="application/json">
+  { "json": true }
+</script>
+<script type="importmap">
+  { "json": true }
+</script>
+<script type="systemjs-importmap">
+  { "json": true }
+</script>
+```
+
 ### Angular
 
 #### Put a closing parenthesis onto a new line after ternaries passed to pipes ([#5682] by [@selvazhagan])
@@ -1211,11 +1278,31 @@ Previously, the flag was not applied on HTML attributes.
 <!-- Input -->
 <div class="a-class-name"></div>
 
-<!-- Prettier (stable with the option --single-quote) -->
+<!-- Prettier 1.18, with the option --single-quote -->
 <div class="a-class-name"></div>
 
-<!-- Prettier (master with the option --single-quote) -->
+<!-- Prettier 1.19, with the option --single-quote -->
 <div class='a-class-name'></div>
+```
+
+#### Break long interpolations ([#6249] by [@jjaffeux])
+
+<!-- prettier-ignore -->
+```hbs
+<!-- Input -->
+{{my-component  foo="bar"  bar="baz" action=(action "almostTheMaximumLengthxxxx")
+}}
+
+<!-- Prettier 1.18 -->
+{{my-component  foo="bar"  bar="baz" action=(action "almostTheMaximumLengthxxxx")
+}}
+
+<!-- Prettier 1.19 -->
+{{my-component
+  foo="bar"
+  bar="baz"
+  action=(action "almostTheMaximumLengthxxxx")
+}}
 ```
 
 ### MDX
@@ -1321,7 +1408,7 @@ $ prettier --parser babel < test.js
 [error] Invalid printWidth value. Expected an integer, but received "nope".
 ```
 
-#### CLI: Gracefully handle nonexistent paths passed to `--stdin-filepath` ([#6687] by [@voithos] and [@lydell])
+#### Gracefully handle nonexistent paths passed to `--stdin-filepath` ([#6687] by [@voithos] and [@lydell])
 
 Previously, if you passed a nonexistent subdirectory to `--stdin-filepath`, Prettier would throw an error. Now, Prettier gracefully handles this.
 
@@ -1335,6 +1422,16 @@ $ prettier --stdin-filepath does/not/exist.js < test.js
 test;
 ```
 
+#### Config should not be evaluated for ignored files ([#6233] by [@jamesreggio])
+
+Prior to this change, the CLI would resolve the config for a file before checking it against the ignored list. If the config was invalid, the CLI would report a failure.
+
+This change relocates the config-resolution phase until after the file is confirmed to not be ignored.
+
+### Other
+
+Thanks to [@fisker] for updating lots of Prettier’s dependencies!
+
 [#5682]: https://github.com/prettier/prettier/pull/5682
 [#5910]: https://github.com/prettier/prettier/pull/5910
 [#6033]: https://github.com/prettier/prettier/pull/6033
@@ -1343,11 +1440,14 @@ test;
 [#6206]: https://github.com/prettier/prettier/pull/6206
 [#6209]: https://github.com/prettier/prettier/pull/6209
 [#6217]: https://github.com/prettier/prettier/pull/6217
+[#6233]: https://github.com/prettier/prettier/pull/6233
 [#6234]: https://github.com/prettier/prettier/pull/6234
 [#6236]: https://github.com/prettier/prettier/pull/6236
+[#6249]: https://github.com/prettier/prettier/pull/6249
 [#6270]: https://github.com/prettier/prettier/pull/6270
 [#6284]: https://github.com/prettier/prettier/pull/6284
 [#6289]: https://github.com/prettier/prettier/pull/6289
+[#6293]: https://github.com/prettier/prettier/pull/6293
 [#6301]: https://github.com/prettier/prettier/pull/6301
 [#6307]: https://github.com/prettier/prettier/pull/6307
 [#6332]: https://github.com/prettier/prettier/pull/6332
@@ -1366,6 +1466,7 @@ test;
 [#6441]: https://github.com/prettier/prettier/pull/6441
 [#6446]: https://github.com/prettier/prettier/pull/6446
 [#6467]: https://github.com/prettier/prettier/pull/6467
+[#6471]: https://github.com/prettier/prettier/pull/6471
 [#6496]: https://github.com/prettier/prettier/pull/6496
 [#6506]: https://github.com/prettier/prettier/pull/6506
 [#6514]: https://github.com/prettier/prettier/pull/6514
@@ -1384,6 +1485,7 @@ test;
 [#6728]: https://github.com/prettier/prettier/pull/6728
 [#6785]: https://github.com/prettier/prettier/pull/6785
 [@andersk]: https://github.com/andersk
+[@ascorbic]: https://github.com/ascorbic
 [@bakkot]: https://gibhub.com/bakkot
 [@brainkim]: https://github.com/brainkim
 [@chadian]: https://github.com/chadian
@@ -1391,13 +1493,16 @@ test;
 [@dcyriller]: https://github.com/dcyriller
 [@duailibe]: https://github.com/duailibe
 [@ericsakmar]: https://github.com/ericsakmar
+[@fisker]: https://github.com/fisker
 [@g-harel]: https://github.com/g-harel
 [@gavinjoyce]: https://github.com/gavinjoyce
 [@ikatyang]: https://github.com/ikatyang/
+[@jjaffeux]: https://github.com/jjaffeux
 [@jounqin]: https://github.com/JounQin
 [@kaicataldo]: https://github.com/kaicataldo
 [@kamilic]: https://github.com/kamilic
 [@lydell]: https://github.com/lydell
+[@mattleff]: https://github.com/mattleff
 [@rreverser]: https://github.com/RReverser
 [@selvazhagan]: https://github.com/selvazhagan
 [@sosukesuzuki]: https://github.com/sosukesuzuki
