Add changelog for Babel error recovery

--- a/website/blog/2019-11-03-1.19.0.md
+++ b/website/blog/2019-11-03-1.19.0.md
@@ -191,6 +191,36 @@ eventStore.update(
 eventStore.update(id, _.flow(updater, incrementVersion));
 ```
 
+#### Enable formatting even if there are parse errors in some cases ([#6816] by [@thorn0] and the Babel team)
+
+We updated the Babel parser to the latest version and got an awesome feature for free. Prettier is now able to format your code even if it is invalid in some cases, which should make your coding experience smoother. This will get better over time as Babel improves their error recovery parsing mode. Read more in the [Babel 7.7.0 blog post](https://babeljs.io/blog/2019/11/05/7.7.0#parser-error-recovery-10363-https-githubcom-babel-babel-pull-10363)!
+
+<!-- prettier-ignore -->
+```js
+// Input
+let a = {
+  __proto__ : x,
+  __proto__ : y
+}
+let a = 2
+
+// Prettier 1.18
+SyntaxError: Redefinition of __proto__ property (3:3)
+  1 | let a = {
+  2 |   __proto__ : x,
+> 3 |   __proto__ : y
+    |   ^
+  4 | }
+  5 | let a = 2
+
+// Prettier 1.19
+let a = {
+  __proto__: x,
+  __proto__: y
+};
+let a = 2;
+```
+
 ## Other changes
 
 ### TypeScript
@@ -1499,6 +1529,7 @@ Thanks to [@fisker] for updating lots of Prettier’s dependencies!
 [#6728]: https://github.com/prettier/prettier/pull/6728
 [#6785]: https://github.com/prettier/prettier/pull/6785
 [#6796]: https://github.com/prettier/prettier/pull/6796
+[#6816]: https://github.com/prettier/prettier/pull/6816
 [@andersk]: https://github.com/andersk
 [@ascorbic]: https://github.com/ascorbic
 [@bakkot]: https://gibhub.com/bakkot
