Add changelog for Flow enums

--- a/website/blog/2019-11-03-1.19.0.md
+++ b/website/blog/2019-11-03-1.19.0.md
@@ -574,6 +574,21 @@ const foo = [abc, def, ghi, jkl, mno, pqr, stu, vwx, yz] as (
 
 ### Flow
 
+#### Add support for enums ([#6833] by [@gkz])
+
+```js
+// Input
+enum E of string {
+  A = "a", B = "b"
+}
+
+// Prettier 1.19
+enum E of string {
+  A = "a",
+  B = "b",
+}
+```
+
 #### Parentheses around arrow functions' return types that have `FunctionTypeAnnotation` nested in `ObjectTypeAnnotation` ([#6717] by [@sosukesuzuki])
 
 This is a workaround for a [bug](https://github.com/facebook/flow/pull/8163) in the Flow parser. Without the parentheses, the parser throws an error.
@@ -1530,6 +1545,7 @@ Thanks to [@fisker] for updating lots of Prettier’s dependencies!
 [#6785]: https://github.com/prettier/prettier/pull/6785
 [#6796]: https://github.com/prettier/prettier/pull/6796
 [#6816]: https://github.com/prettier/prettier/pull/6816
+[#6833]: https://github.com/prettier/prettier/pull/6833
 [@andersk]: https://github.com/andersk
 [@ascorbic]: https://github.com/ascorbic
 [@bakkot]: https://gibhub.com/bakkot
@@ -1542,6 +1558,7 @@ Thanks to [@fisker] for updating lots of Prettier’s dependencies!
 [@fisker]: https://github.com/fisker
 [@g-harel]: https://github.com/g-harel
 [@gavinjoyce]: https://github.com/gavinjoyce
+[@gkz]: https://github.com/gkz
 [@ikatyang]: https://github.com/ikatyang/
 [@jjaffeux]: https://github.com/jjaffeux
 [@jounqin]: https://github.com/JounQin
