Organize changelog entries added recently

--- a/website/blog/2019-11-03-1.19.0.md
+++ b/website/blog/2019-11-03-1.19.0.md
@@ -134,7 +134,7 @@ addTen(2); // 12
 let newScore = player.score |> add(7, ?) |> clamp(0, 100, ?); // shallow stack, the pipe to \`clamp\` is the same frame as the pipe to \`add\`.
 ```
 
-#### JavaScript: Update `??` precedence to match stage 3 proposal ([#6404] by [@vjeux], [#6863] by [@jridgewell])
+#### Update `??` precedence to match stage 3 proposal ([#6404] by [@vjeux], [#6863] by [@jridgewell])
 
 We've updated Prettier's support for the nullish coalescing operator to match a spec update that no longer allows it to immediately contain, or be contained within an `&&` or `||` operation.
 
@@ -1026,6 +1026,36 @@ const bigints = [200000n, 0x0000000an, 0b01111111n];
 const bigints = [200_000n, 0x0000_000an, 0b0111_1111n];
 ```
 
+#### Better formatting for inline `await` expression nested in calls ([#6856] by [@thorn0])
+
+<!-- prettier-ignore -->
+```js
+// Input
+async function f() {
+  const admins = (await(db.select('*').from('admins').leftJoin('bla').where('id', 'in', [1,2,3,4]))).map(({id, name})=>({id, name}))
+}
+
+// Prettier 1.18
+async function f() {
+  const admins = (await db
+    .select("*")
+    .from("admins")
+    .leftJoin("bla")
+    .where("id", "in", [1, 2, 3, 4])).map(({ id, name }) => ({ id, name }));
+}
+
+// Prettier 1.19
+async function f() {
+  const admins = (
+    await db
+      .select("*")
+      .from("admins")
+      .leftJoin("bla")
+      .where("id", "in", [1, 2, 3, 4])
+  ).map(({ id, name }) => ({ id, name }));
+}
+```
+
 ### HTML
 
 #### Don't wrap `template` elements on lines shorter than `printWidth` ([#6284] by [@sosukesuzuki])
@@ -1437,6 +1467,22 @@ SyntaxError: Adjacent JSX elements must be wrapped in an enclosing tag. Did you 
 </Hello>123
 ```
 
+### Less
+
+#### Don't lowercase variable names and remove whitespace between variable and colon ([#6778] by [@fisker])
+
+<!-- prettier-ignore -->
+```less
+// Input
+@FoO : bar;
+
+// Prettier 1.18
+@foo : bar;
+
+// Prettier 1.19
+@FoO: bar;
+```
+
 ### API
 
 #### Add `resolveConfig` option to `getFileInfo()` ([#6666] by [@kaicataldo])
@@ -1490,49 +1536,7 @@ Prior to this change, the CLI would resolve the config for a file before checkin
 
 This change relocates the config-resolution phase until after the file is confirmed to not be ignored.
 
-### Other
-
-Thanks to [@fisker] for updating lots of Prettier’s dependencies!
-
-#### VS Code: add support for .mongo files ([#6848] by [@aymericbouzy])
-
-When using the Azure Cosmos DB extension for VS Code, you can create .mongo files to write MongoDB queries, which use Javascript syntax. This change allows VS Code to format your file using Prettier.
-
-```js
-db.users.find({ someField: { $exists: true } });
-```
-
-#### JavaScript: Better formatting for inline `await` expression nested in calls ([#6856] by [@thorn0])
-
-<!-- prettier-ignore -->
-```js
-// Input
-async function f() {
-  const admins = (await(db.select('*').from('admins').leftJoin('bla').where('id', 'in', [1,2,3,4]))).map(({id, name})=>({id, name}))
-}
-
-// Prettier 1.18
-async function f() {
-  const admins = (await db
-    .select("*")
-    .from("admins")
-    .leftJoin("bla")
-    .where("id", "in", [1, 2, 3, 4])).map(({ id, name }) => ({ id, name }));
-}
-
-// Prettier 1.19
-async function f() {
-  const admins = (
-    await db
-      .select("*")
-      .from("admins")
-      .leftJoin("bla")
-      .where("id", "in", [1, 2, 3, 4])
-  ).map(({ id, name }) => ({ id, name }));
-}
-```
-
-#### CLI: Display invalid config filename in error message ([#6865] by [@fisker])
+#### Display invalid config filename in error message ([#6865] by [@fisker])
 
 <!-- prettier-ignore -->
 ```
@@ -1546,18 +1550,16 @@ Invalid configuration file: ...
 Invalid configuration file `.invalid-config`: ...
 ```
 
-#### Less: don't lowercase variable names, remove whitespace between variable and colon ([#6778] by [@fisker])
+### Other
 
-<!-- prettier-ignore -->
-```less
-// Input
-@FoO : bar;
+Thanks to [@fisker] for updating lots of Prettier’s dependencies!
 
-// Prettier 1.18
-@foo : bar;
+#### VS Code: add support for .mongo files ([#6848] by [@aymericbouzy])
 
-// Prettier 1.19
-@FoO: bar;
+When using the Azure Cosmos DB extension for VS Code, you can create .mongo files to write MongoDB queries, which use Javascript syntax. This change allows VS Code to format your file using Prettier.
+
+```js
+db.users.find({ someField: { $exists: true } });
 ```
 
 [#5682]: https://github.com/prettier/prettier/pull/5682
