--- a/website/blog/2019-11-08-1.19.0.md
+++ b/website/blog/2019-11-08-1.19.0.md
@@ -134,47 +134,6 @@ addTen(2); // 12
 let newScore = player.score |> add(7, ?) |> clamp(0, 100, ?); // shallow stack, the pipe to \`clamp\` is the same frame as the pipe to \`add\`.
 ```
 
-#### Update `??` precedence to match stage 3 proposal ([#6404] by [@vjeux], [#6863] by [@jridgewell])
-
-We've updated Prettier's support for the nullish coalescing operator to match a spec update that no longer allows it to immediately contain, or be contained within an `&&` or `||` operation.
-
-<!-- prettier-ignore -->
-```js
-// Input
-(foo ?? bar) || baz;
-(foo || bar) ?? baz;
-
-// Prettier 1.18
-foo ?? bar || baz;
-foo || bar ?? baz;
-
-// Prettier 1.19
-(foo ?? bar) || baz;
-(foo || bar) ?? baz;
-```
-
-Please note that since we have updated our parsers with versions that support this spec update, code without the parentheses will throw a parse error.
-
-#### Don't require parens for same-operator logical expressions ([#6864] by [@jridgewell])
-
-<!-- prettier-ignore -->
-```js
-// Input
-foo && (bar && baz);
-foo || (bar || baz);
-foo ?? (bar ?? baz);
-
-// Prettier 1.18
-foo && (bar && baz);
-foo || (bar || baz);
-foo ?? (bar ?? baz);
-
-// Prettier 1.19
-foo && bar && baz;
-foo || bar || baz;
-foo ?? bar ?? baz;
-```
-
 #### Use function literals in arguments to detect function composition ([#6033] by [@brainkim])
 
 Previously, we used a set of hard-coded names related to functional programming (`compose`, `flow`, `pipe`, etc.) to detect function composition and chaining patterns in code. This was done so that Prettier would not put code like the following call to `pipe` on the same line even if it fit within the allotted column budget:
@@ -685,6 +644,47 @@ new Map([
   [K, L],
   [M, N]
 ]);
+```
+
+#### Update `??` precedence to match stage 3 proposal ([#6404] by [@vjeux], [#6863] by [@jridgewell])
+
+We've updated Prettier's support for the nullish coalescing operator to match a spec update that no longer allows it to immediately contain, or be contained within an `&&` or `||` operation.
+
+<!-- prettier-ignore -->
+```js
+// Input
+(foo ?? bar) || baz;
+(foo || bar) ?? baz;
+
+// Prettier 1.18
+foo ?? bar || baz;
+foo || bar ?? baz;
+
+// Prettier 1.19
+(foo ?? bar) || baz;
+(foo || bar) ?? baz;
+```
+
+Please note that since we have updated our parsers with versions that support this spec update, code without the parentheses will throw a parse error.
+
+#### Don't require parens for same-operator logical expressions ([#6864] by [@jridgewell])
+
+<!-- prettier-ignore -->
+```js
+// Input
+foo && (bar && baz);
+foo || (bar || baz);
+foo ?? (bar ?? baz);
+
+// Prettier 1.18
+foo && (bar && baz);
+foo || (bar || baz);
+foo ?? (bar ?? baz);
+
+// Prettier 1.19
+foo && bar && baz;
+foo || bar || baz;
+foo ?? bar ?? baz;
 ```
 
 #### More readable parentheses for `new` call ([#6412] by [@bakkot])
@@ -1688,6 +1688,7 @@ db.users.find({ someField: { $exists: true } });
 [@gavinjoyce]: https://github.com/gavinjoyce
 [@gkz]: https://github.com/gkz
 [@ikatyang]: https://github.com/ikatyang/
+[@jamesreggio]: https://github.com/jamesreggio
 [@jjaffeux]: https://github.com/jjaffeux
 [@jounqin]: https://github.com/JounQin
 [@jridgewell]: https://github.com/jridgewell
