--- a/changelog_unreleased/typescript/pr-6901.md
+++ b/changelog_unreleased/typescript/pr-6901.md
@@ -1,65 +1,63 @@
+#### Fix formatting of type operator as arrow function return type ([#6901](https://github.com/prettier/prettier/pull/6901) by [@sosukesuzuki](https://github.com/sosukesuzuki))
+
+<!-- prettier-ignore -->
 ```ts
 // Input
-export const fun1 = async (
-  vehicleId: string,
-): Promise<
-  Collections.Parts.PrintedCircuitBoardAssembly['attributes'] & undefined
-> => {}
-
-export const fun2 = async (
-  vehicleId: string,
-): Promise<
-  Collections.Parts.PrintedCircuitBoardAssembly['attributes']
-> => {}
-
-export const fun3 = async (
-  vehicleId: string,
-): Promise<
-  keyof Collections.Parts.PrintedCircuitBoardAssembly['attributes']
-> => {}
-
-export const fun4 = async (
-  vehicleId: string,
-): Promise<
-  Collections.Parts.PrintedCircuitBoardAssembly[]
-> => {}
-
-// Prettier stable
-export const fun1 = async (
-  vehicleId: string
-): Promise<Collections.Parts.PrintedCircuitBoardAssembly["attributes"] &
-  undefined> => {};
-
-export const fun2 = async (
-  vehicleId: string
-): Promise<Collections.Parts.PrintedCircuitBoardAssembly["attributes"]> => {};
-
-export const fun3 = async (
-  vehicleId: string
-): Promise<keyof Collections.Parts.PrintedCircuitBoardAssembly["attributes"]> => {};
-
-export const fun4 = async (
-  vehicleId: string
-): Promise<Collections.Parts.PrintedCircuitBoardAssembly[]> => {};
-
-// Pretter master
-export const fun1 = async (
+export const getVehicleDescriptor = async (
   vehicleId: string
 ): Promise<
   Collections.Parts.PrintedCircuitBoardAssembly["attributes"] & undefined
 > => {};
-
-export const fun2 = async (
-  vehicleId: string
-): Promise<Collections.Parts.PrintedCircuitBoardAssembly["attributes"]> => {};
-
-export const fun3 = async (
+export const getVehicleDescriptor = async (
   vehicleId: string
 ): Promise<
-  keyof Collections.Parts.PrintedCircuitBoardAssembly["attributes"]
+  Collections.Parts.PrintedCircuitBoardAssembly["attributessssssssssssssssssssssss"]
+> => {};
+export const getVehicleDescriptor = async (
+  vehicleId: string
+): Promise<
+  keyof Collections.Parts.PrintedCircuitBoardAssemblyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy
+> => {};
+export const getVehicleDescriptor = async (
+  vehicleId: string
+): Promise<
+  Collections.Parts.PrintedCircuitBoardAssemblyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy[]
 > => {};
 
-export const fun4 = async (
+// Prettier stable
+export const getVehicleDescriptor = async (
   vehicleId: string
-): Promise<Collections.Parts.PrintedCircuitBoardAssembly[]> => {};
+): Promise<Collections.Parts.PrintedCircuitBoardAssembly["attributes"] &
+  undefined> => {};
+export const getVehicleDescriptor = async (
+  vehicleId: string
+): Promise<Collections.Parts.PrintedCircuitBoardAssembly["attributessssssssssssssssssssssss"]> => {};
+export const getVehicleDescriptor = async (
+  vehicleId: string
+): Promise<keyof Collections.Parts.PrintedCircuitBoardAssemblyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy> => {};
+export const getVehicleDescriptor = async (
+  vehicleId: string
+): Promise<Collections.Parts.PrintedCircuitBoardAssemblyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy[]> => {};
+
+// Prettier
+export const getVehicleDescriptor = async (
+  vehicleId: string
+): Promise<
+  Collections.Parts.PrintedCircuitBoardAssembly["attributes"] & undefined
+> => {};
+export const getVehicleDescriptor = async (
+  vehicleId: string
+): Promise<
+  Collections.Parts.PrintedCircuitBoardAssembly["attributessssssssssssssssssssssss"]
+> => {};
+export const getVehicleDescriptor = async (
+  vehicleId: string
+): Promise<
+  keyof Collections.Parts.PrintedCircuitBoardAssemblyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy
+> => {};
+export const getVehicleDescriptor = async (
+  vehicleId: string
+): Promise<
+  Collections.Parts.PrintedCircuitBoardAssemblyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy[]
+> => {};
 ```
