--- a/changelog_unreleased/typescript/pr-6901.md
+++ b/changelog_unreleased/typescript/pr-6901.md
@@ -8,56 +8,17 @@ export const getVehicleDescriptor = async (
 ): Promise<
   Collections.Parts.PrintedCircuitBoardAssembly["attributes"] & undefined
 > => {};
-export const getVehicleDescriptor = async (
-  vehicleId: string
-): Promise<
-  Collections.Parts.PrintedCircuitBoardAssembly["attributessssssssssssssssssssssss"]
-> => {};
-export const getVehicleDescriptor = async (
-  vehicleId: string
-): Promise<
-  keyof Collections.Parts.PrintedCircuitBoardAssemblyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy
-> => {};
-export const getVehicleDescriptor = async (
-  vehicleId: string
-): Promise<
-  Collections.Parts.PrintedCircuitBoardAssemblyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy[]
-> => {};
 
 // Prettier stable
 export const getVehicleDescriptor = async (
   vehicleId: string
 ): Promise<Collections.Parts.PrintedCircuitBoardAssembly["attributes"] &
   undefined> => {};
-export const getVehicleDescriptor = async (
-  vehicleId: string
-): Promise<Collections.Parts.PrintedCircuitBoardAssembly["attributessssssssssssssssssssssss"]> => {};
-export const getVehicleDescriptor = async (
-  vehicleId: string
-): Promise<keyof Collections.Parts.PrintedCircuitBoardAssemblyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy> => {};
-export const getVehicleDescriptor = async (
-  vehicleId: string
-): Promise<Collections.Parts.PrintedCircuitBoardAssemblyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy[]> => {};
 
-// Prettier
+// Prettier master
 export const getVehicleDescriptor = async (
   vehicleId: string
 ): Promise<
   Collections.Parts.PrintedCircuitBoardAssembly["attributes"] & undefined
-> => {};
-export const getVehicleDescriptor = async (
-  vehicleId: string
-): Promise<
-  Collections.Parts.PrintedCircuitBoardAssembly["attributessssssssssssssssssssssss"]
-> => {};
-export const getVehicleDescriptor = async (
-  vehicleId: string
-): Promise<
-  keyof Collections.Parts.PrintedCircuitBoardAssemblyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy
-> => {};
-export const getVehicleDescriptor = async (
-  vehicleId: string
-): Promise<
-  Collections.Parts.PrintedCircuitBoardAssemblyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy[]
 > => {};
 ```
