--- a/changelog_unreleased/markdown/pr-6852.md
+++ b/changelog_unreleased/markdown/pr-6852.md
@@ -1,4 +1,4 @@
-#### Markdown: handle zero-based lists correctly ([#6852](https://github.com/prettier/prettier/pull/6852) by [@evilebottnawi](https://github.com/evilebottnawi))
+#### Handle zero-based lists correctly ([#6852](https://github.com/prettier/prettier/pull/6852) by [@evilebottnawi](https://github.com/evilebottnawi))
 
 <!-- prettier-ignore -->
 ```md
