--- a/changelog_unreleased/mdx/pr-6949.md
+++ b/changelog_unreleased/mdx/pr-6949.md
@@ -1,4 +1,4 @@
-#### Fix MDX html parsing errors ([#6949](https://github.com/prettier/prettier/pull/6949) by [@Tigge](https://github.com/Tigge))
+#### Fix MDX html parsing errors ([#6949](https://github.com/prettier/prettier/pull/6949) by [@Tigge](https://github.com/Tigge) & [@thorn0](https://github.com/thorn0))
 
 MDX parsing for JSX failed when encountering JSX elements that where not
 parsable as HTML. Such as `<Tag value={{a: 'b'}}>test</Tag>`
