--- a/changelog_unreleased/javascript/pr-6984.md
+++ b/changelog_unreleased/javascript/pr-6984.md
@@ -1,6 +1,6 @@
 #### Fix formatting of labeled statements with comments ([#6994](https://github.com/prettier/prettier/pull/6984) by [@clement26695](https://github.com/clement26695))
 
-Comments in labeled statements should always be printed as leading comments of the labeled statement
+Formatting of comments in labeled statements was not stable
 
 <!-- prettier-ignore -->
 ```jsx
@@ -9,20 +9,15 @@ loop1:
 //test
 const i = 3;
 
+// Prettier stable (first output)
 loop1: //test
 const i = 3;
 
-// Prettier stable
-loop1: //test
-const i = 3;
-
+// Prettier stable (second output)
 //test
 loop1: const i = 3;
 
-// Prettier master
-//test
-loop1: const i = 3;
-
+// Prettier master (first output)
 //test
 loop1: const i = 3;
 ```
