--- a/changelog_unreleased/javascript/pr-7026.md
+++ b/changelog_unreleased/javascript/pr-7026.md
@@ -3,28 +3,24 @@
 <!-- prettier-ignore -->
 ```jsx
 // Input
-const radioSelectedAttr =
-    (isAnyValueSelected &&
-        node.getAttribute(radioAttr.toLowerCase()) === radioValue) ||
-    ((!isAnyValueSelected && values[a].default === true) || a === 0);
+const averredBathersBoxroomBuggyNurl =
+  bifornCringerMoshedPerplexSawder === 1 ||
+  (askTrovenaBeenaDependsRowans === 2 || glimseGlyphsHazardNoopsTieTie === 3);
 
-// Prettier stable (first pass)
-const radioSelectedAttr =
-  (isAnyValueSelected &&
-    node.getAttribute(radioAttr.toLowerCase()) === radioValue) ||
-  (!isAnyValueSelected && values[a].default === true) || a === 0;
+// Prettier stable (first output)
+const averredBathersBoxroomBuggyNurl =
+  bifornCringerMoshedPerplexSawder === 1 ||
+  askTrovenaBeenaDependsRowans === 2 || glimseGlyphsHazardNoopsTieTie === 3;
 
-// Prettier stable (second pass)
-const radioSelectedAttr =
-  (isAnyValueSelected &&
-    node.getAttribute(radioAttr.toLowerCase()) === radioValue) ||
-  (!isAnyValueSelected && values[a].default === true) ||
-  a === 0;
+// Prettier stable (second output)
+const averredBathersBoxroomBuggyNurl =
+  bifornCringerMoshedPerplexSawder === 1 ||
+  askTrovenaBeenaDependsRowans === 2 ||
+  glimseGlyphsHazardNoopsTieTie === 3;
 
-// Prettier master (first pass)
-const radioSelectedAttr =
-  (isAnyValueSelected &&
-    node.getAttribute(radioAttr.toLowerCase()) === radioValue) ||
-  (!isAnyValueSelected && values[a].default === true) ||
-  a === 0;
+// Prettier master (first output)
+const averredBathersBoxroomBuggyNurl =
+  bifornCringerMoshedPerplexSawder === 1 ||
+  askTrovenaBeenaDependsRowans === 2 ||
+  glimseGlyphsHazardNoopsTieTie === 3;
 ```
