--- a/changelog_unreleased/javascript/pr-7042.md
+++ b/changelog_unreleased/javascript/pr-7042.md
@@ -1,15 +1,12 @@
-# JavaScript: remove extra parens for sequence expressions([#7042](https://github.com/prettier/prettier/pull/7042) by [@sosukesuzuki](https://github.com/sosukesuzuki))
+# JavaScript: Add parentheses to SequenceExpression always([#7042](https://github.com/prettier/prettier/pull/7042) by [@sosukesuzuki](https://github.com/sosukesuzuki))
 
 ```js
 // Input
-if (a, b) {
-}
+(a, b);
 
 // Prettier stable
-if ((a, b)) {
-}
+a, b;
 
 // Prettier master
-if (a, b) {
-}
+(a, b);
 ```
