Adjust CHANGELOG to reflect latest changes

--- a/changelog_unreleased/handlebars/pr-7051.md
+++ b/changelog_unreleased/handlebars/pr-7051.md
@@ -16,8 +16,7 @@
 
 {{!-- Prettier master --}}
 <a
-  href="a-very-long-href-from-a-third-party-marketing-platform{{id
-    }}longer-than-eighty-chars"
+  href="a-very-long-href-from-a-third-party-marketing-platform{{id}}longer-than-eighty-chars"
 >
   Link
 </a>
