--- a/changelog_unreleased/javascript/pr-7070.md
+++ b/changelog_unreleased/javascript/pr-7070.md
@@ -1,4 +1,4 @@
-# JavaScript: Format ThrowStatement like ReturnStatement([#7070](https://github.com/prettier/prettier/pull/7070) by [@sosukesuzuki](https://github.com/sosukesuzuki))
+# Format `throw` like `return` ([#7070](https://github.com/prettier/prettier/pull/7070) by [@sosukesuzuki](https://github.com/sosukesuzuki))
 
 <!-- prettier-ignore -->
 ```js
