CHANGELOG: Remove --print-width option

--- a/changelog_unreleased/handlebars/pr-7157.md
+++ b/changelog_unreleased/handlebars/pr-7157.md
@@ -2,21 +2,18 @@
 
 <!-- prettier-ignore -->
 ```hbs
-{{!-- Options --}}
---print-width=40
-
 {{!-- input --}}
-<p>Hi  {{firstName}}  {{lastName}}   , welcome!</p>
+<p>Hi here is your name, as it will be displayed  {{firstName}}  {{lastName}}   , welcome!</p>
 
 {{!-- stable --}}
 <p>
-  Hi {{firstName}} {{lastName
+  Hi here is your name, as it will be displayed {{firstName}} {{lastName
   }} , welcome!
 </p>
 
 {{!-- master --}}
 <p>
-  Hi {{firstName}} {{
+  Hi here is your name, as it will be displayed {{firstName}} {{
     lastName
   }} , welcome!
 </p>
