chore: update changelog

--- a/changelog_unreleased/typescript/pr-7144.md
+++ b/changelog_unreleased/typescript/pr-7144.md
@@ -39,6 +39,41 @@ let foo10: new /* foo */ (a: /* bar */ string) /* baz */ => string;
 
 // Prettier stable
 interface foo1 {
+  bar3/* foo */ (/* baz */) // bat
+  bar/* foo */ ? /* bar */ (/* baz */) /* bat */;
+  bar2/* foo */ (/* baz */) /* bat */
+}
+
+interface foo2 {
+  bar/* foo */ ? /* bar */ (bar: /* baz */ string): /* bat */ string;
+}
+
+interface foo3 {
+  /* foo */ (/* bar */): /* baz */ string;
+}
+
+interface foo4 {
+  /* foo */ (bar: /* bar */ string): /* baz */ string;
+}
+
+interface foo5 {
+  /* foo */ new /* bar */  (a: /* baz */ string): /* bat */ string
+}
+
+interface foo6 {
+  /* foo */ new /* bar */ (/* baz */): /* bat */ string
+}
+
+type foo7 = /* foo */ (/* bar */) /* baz */ => void
+
+type foo8 = /* foo */ (a: /* bar */ string) /* baz */ => void
+
+let foo9: new /* foo */ (/* bar */) /* baz */ => string;
+
+let foo10: new /* foo */ (a: /* bar */ string) /* baz */ => string;
+
+// Prettier master
+interface foo1 {
   bar3 /* foo */(/* baz */); // bat
   bar /* foo */ /* bar */?(/* baz */) /* bat */;
   bar2 /* foo */(/* baz */) /* bat */;
@@ -72,41 +107,6 @@ let foo9: new (/* bar */) => /* foo */ /* baz */ string;
 
 let foo10: new (/* foo */ a: /* bar */ string) => /* baz */ string;
 
-
-// Prettier master
-interface foo1 {
-  bar3 /* foo */ /* baz */(); // bat
-  bar /* foo */ /* bar */ /* baz */ /* bat */?();
-  bar2 /* foo */ /* baz */() /* bat */;
-}
-
-interface foo2 {
-  bar /* foo */?(/* bar */ bar: /* baz */ string): /* bat */ string;
-}
-
-interface foo3 {
-  /* foo */ (): /* bar */ /* baz */ string;
-}
-
-interface foo4 {
-  /* foo */ (bar: /* bar */ string): /* baz */ string;
-}
-
-interface foo5 {
-  /* foo */ new (/* bar */ a: /* baz */ string): /* bat */ string;
-}
-
-interface foo6 {
-  /* foo */ new (): /* bar */ /* baz */ /* bat */ string;
-}
-
-type foo7 = /* foo */ () => /* bar */ /* baz */ void;
-
-type foo8 = /* foo */ (a: /* bar */ string) => /* baz */ void;
-
-let foo9: new () => /* foo */ /* bar */ /* baz */ string;
-
-let foo10: new (/* foo */ a: /* bar */ string) => /* baz */ string;
 ```
 
 ```ts
@@ -118,13 +118,6 @@ abstract class Test {
 }
 
 // Prettier stable
-abstract class Test {
-  abstract foo12 /* foo */(a: /* bar */ string): /* baz */ void;
-
-  abstract foo13 /* foo */(/* bar */); /* baz */
-}
-
-// Prettier master
 Error: Comment "foo" was not printed. Please report this error!
     at https://prettier.io/lib/standalone.js:15543:15
     at Array.forEach (<anonymous>)
@@ -136,4 +129,11 @@ Error: Comment "foo" was not printed. Please report this error!
     at Object.format (https://prettier.io/lib/standalone.js:31802:14)
     at formatCode (https://prettier.io/worker.js:234:21)
     at handleMessage (https://prettier.io/worker.js:185:18)
+
+// Prettier master
+abstract class Test {
+  abstract foo12 /* foo */(a: /* bar */ string): /* baz */ void;
+
+  abstract foo13 /* foo */(/* bar */); /* baz */
+}
 ```
