chore: update changelog

--- a/changelog_unreleased/typescript/pr-7144.md
+++ b/changelog_unreleased/typescript/pr-7144.md
@@ -39,17 +39,17 @@ let foo10: new /* foo */ (a: /* bar */ string) /* baz */ => string;
 
 // Prettier stable
 interface foo1 {
-  bar3/* foo */ (/* baz */) // bat
-  bar/* foo */ ? /* bar */ (/* baz */) /* bat */;
-  bar2/* foo */ (/* baz */) /* bat */
+  bar3 /* foo */ /* baz */(); // bat
+  bar /* foo */ /* bar */ /* baz */ /* bat */?();
+  bar2 /* foo */ /* baz */() /* bat */;
 }
 
 interface foo2 {
-  bar/* foo */ ? /* bar */ (bar: /* baz */ string): /* bat */ string;
+  bar /* foo */?(/* bar */ bar: /* baz */ string): /* bat */ string;
 }
 
 interface foo3 {
-  /* foo */ (/* bar */): /* baz */ string;
+  /* foo */ (): /* bar */ /* baz */ string;
 }
 
 interface foo4 {
@@ -57,20 +57,20 @@ interface foo4 {
 }
 
 interface foo5 {
-  /* foo */ new /* bar */  (a: /* baz */ string): /* bat */ string
+  /* foo */ new (/* bar */ a: /* baz */ string): /* bat */ string;
 }
 
 interface foo6 {
-  /* foo */ new /* bar */ (/* baz */): /* bat */ string
+  /* foo */ new (): /* bar */ /* baz */ /* bat */ string;
 }
 
-type foo7 = /* foo */ (/* bar */) /* baz */ => void
+type foo7 = /* foo */ () => /* bar */ /* baz */ void;
 
-type foo8 = /* foo */ (a: /* bar */ string) /* baz */ => void
+type foo8 = /* foo */ (a: /* bar */ string) => /* baz */ void;
 
-let foo9: new /* foo */ (/* bar */) /* baz */ => string;
+let foo9: new () => /* foo */ /* bar */ /* baz */ string;
 
-let foo10: new /* foo */ (a: /* bar */ string) /* baz */ => string;
+let foo10: new (/* foo */ a: /* bar */ string) => /* baz */ string;
 
 // Prettier master
 interface foo1 {
@@ -106,7 +106,6 @@ type foo8 = /* foo */ (a: /* bar */ string) => /* baz */ void;
 let foo9: new (/* bar */) => /* foo */ /* baz */ string;
 
 let foo10: new (/* foo */ a: /* bar */ string) => /* baz */ string;
-
 ```
 
 ```ts
