--- a/changelog_unreleased/markdown/pr-7178.md
+++ b/changelog_unreleased/markdown/pr-7178.md
@@ -1,4 +1,4 @@
-#### markdown: fix rebundant leading spaces in markdown list ([#7178](https://github.com/prettier/prettier/pull/7178) by [@sasurau4](https://github.com/sasurau4))
+#### markdown: fix redundant leading spaces in markdown list ([#7178](https://github.com/prettier/prettier/pull/7178) by [@sasurau4](https://github.com/sasurau4))
 
 <!-- prettier-ignore -->
 ```md
