--- a/changelog_unreleased/markdown/pr-7181.md
+++ b/changelog_unreleased/markdown/pr-7181.md
@@ -1,4 +1,4 @@
-#### (Markdown: fix HTML formatting broken if the beginning tag starts after a list item [#7181](https://github.com/prettier/prettier/pull/7181) by [@sasurau4](https://github.com/sasurau4))
+#### fix HTML formatting broken if the beginning tag starts after a list item ([#7181](https://github.com/prettier/prettier/pull/7181) by [@sasurau4](https://github.com/sasurau4))
 
 <!-- prettier-ignore -->
 ```md
