--- a/changelog_unreleased/javascript/pr-7204.md
+++ b/changelog_unreleased/javascript/pr-7204.md
@@ -1,4 +1,4 @@
-#### javascript: fix template strings aren't moved to new line, where '' or "" strings are ([#7140](https://github.com/prettier/prettier/pull/7204) by [@sasurau4](https://github.com/sasurau4))
+#### Fix template strings aren't moved to new line, where '' or "" strings are ([#7140](https://github.com/prettier/prettier/pull/7204) by [@sasurau4](https://github.com/sasurau4))
 
 ```js
 // Input
