--- a/changelog_unreleased/typescript/pr-7174.md
+++ b/changelog_unreleased/typescript/pr-7174.md
@@ -3,11 +3,11 @@
 <!-- prettier-ignore -->
 ```ts
 // Input
-type A = { [key in keyof B] };
+type A = { [key in B] };
 
 // Prettier stable
-type A = { [key in keyof B]: };
+type A = { [key in B]: };
 
 // Prettier master
-type A = { [key in keyof B] };
+type A = { [key in B] };
 ```
