--- a/changelog_unreleased/typescript/pr-7144.md
+++ b/changelog_unreleased/typescript/pr-7144.md
@@ -1,110 +1,56 @@
-#### Fix formatting comments for typescript function like nodes ([#6901](https://github.com/prettier/prettier/pull/7144) by [@armano2](https://github.com/armano2))
+#### Fix formatting comments for function-like nodes ([#6901](https://github.com/prettier/prettier/pull/7144) by [@armano2](https://github.com/armano2))
 
 <!-- prettier-ignore -->
 ```ts
 // Input
 interface foo1 {
-  bar3/* foo */ (/* baz */) // bat
-  bar/* foo */ ? /* bar */ (/* baz */) /* bat */;
-  bar2/* foo */ (/* baz */) /* bat */
-}
-
-interface foo2 {
-  bar/* foo */ ? /* bar */ (bar: /* baz */ string): /* bat */ string;
-}
-
-interface foo3 {
+  bar1/* foo */ (/* baz */) // bat
+  bar2/* foo */ ? /* bar */ (/* baz */) /* bat */;
+  bar3/* foo */ (/* baz */) /* bat */
+  bar4/* foo */ ? /* bar */ (bar: /* baz */ string): /* bat */ string;
   /* foo */ (/* bar */): /* baz */ string;
-}
-
-interface foo4 {
   /* foo */ (bar: /* bar */ string): /* baz */ string;
-}
-
-interface foo5 {
   /* foo */ new /* bar */  (a: /* baz */ string): /* bat */ string
-}
-
-interface foo6 {
   /* foo */ new /* bar */ (/* baz */): /* bat */ string
 }
 
 type foo7 = /* foo */ (/* bar */) /* baz */ => void
-
 type foo8 = /* foo */ (a: /* bar */ string) /* baz */ => void
-
 let foo9: new /* foo */ (/* bar */) /* baz */ => string;
-
 let foo10: new /* foo */ (a: /* bar */ string) /* baz */ => string;
 
 // Prettier stable
 interface foo1 {
-  bar3 /* foo */ /* baz */(); // bat
-  bar /* foo */ /* bar */ /* baz */ /* bat */?();
-  bar2 /* foo */ /* baz */() /* bat */;
-}
-
-interface foo2 {
-  bar /* foo */?(/* bar */ bar: /* baz */ string): /* bat */ string;
-}
-
-interface foo3 {
+  bar1 /* foo */ /* baz */(); // bat
+  bar2 /* foo */ /* bar */ /* baz */ /* bat */?();
+  bar3 /* foo */ /* baz */() /* bat */;
+  bar4 /* foo */?(/* bar */ bar: /* baz */ string): /* bat */ string;
   /* foo */ (): /* bar */ /* baz */ string;
-}
-
-interface foo4 {
   /* foo */ (bar: /* bar */ string): /* baz */ string;
-}
-
-interface foo5 {
   /* foo */ new (/* bar */ a: /* baz */ string): /* bat */ string;
-}
-
-interface foo6 {
   /* foo */ new (): /* bar */ /* baz */ /* bat */ string;
 }
 
 type foo7 = /* foo */ () => /* bar */ /* baz */ void;
-
 type foo8 = /* foo */ (a: /* bar */ string) => /* baz */ void;
-
 let foo9: new () => /* foo */ /* bar */ /* baz */ string;
-
 let foo10: new (/* foo */ a: /* bar */ string) => /* baz */ string;
 
 // Prettier master
 interface foo1 {
-  bar3 /* foo */(/* baz */); // bat
-  bar /* foo */ /* bar */?(/* baz */) /* bat */;
-  bar2 /* foo */(/* baz */) /* bat */;
-}
-
-interface foo2 {
-  bar /* foo */?(/* bar */ bar: /* baz */ string): /* bat */ string;
-}
-
-interface foo3 {
+  bar1 /* foo */(/* baz */); // bat
+  bar2 /* foo */ /* bar */?(/* baz */) /* bat */;
+  bar3 /* foo */(/* baz */) /* bat */;
+  bar4 /* foo */?(/* bar */ bar: /* baz */ string): /* bat */ string;
   /* foo */ (/* bar */): /* baz */ string;
-}
-
-interface foo4 {
   /* foo */ (bar: /* bar */ string): /* baz */ string;
-}
-
-interface foo5 {
   /* foo */ new (/* bar */ a: /* baz */ string): /* bat */ string;
-}
-
-interface foo6 {
   /* foo */ new (/* baz */): /* bar */ /* bat */ string;
 }
 
 type foo7 = /* foo */ (/* bar */) => /* baz */ void;
-
 type foo8 = /* foo */ (a: /* bar */ string) => /* baz */ void;
-
 let foo9: new (/* bar */) => /* foo */ /* baz */ string;
-
 let foo10: new (/* foo */ a: /* bar */ string) => /* baz */ string;
 ```
 
@@ -112,7 +58,6 @@ let foo10: new (/* foo */ a: /* bar */ string) => /* baz */ string;
 // Input
 abstract class Test {
   abstract foo12 /* foo */ (a: /* bar */ string): /* baz */ void
-
   abstract foo13 /* foo */ (/* bar */) /* baz */
 }
 
@@ -132,7 +77,6 @@ Error: Comment "foo" was not printed. Please report this error!
 // Prettier master
 abstract class Test {
   abstract foo12 /* foo */(a: /* bar */ string): /* baz */ void;
-
   abstract foo13 /* foo */(/* bar */); /* baz */
 }
 ```
