--- a/changelog_unreleased/typescript/pr-7228.md
+++ b/changelog_unreleased/typescript/pr-7228.md
@@ -1,4 +1,4 @@
-#### Typescript: Remove unnecessary colons for TSIndexSignature without type parameters ([#7228](https://github.com/prettier/prettier/pull/7228) by [@cola119](https://github.com/cola119))
+#### Fix printing index signatures without type annotations ([#7228](https://github.com/prettier/prettier/pull/7228) by [@cola119](https://github.com/cola119))
 
 <!-- prettier-ignore -->
 ```ts
