--- a/changelog_unreleased/typescript/pr-7228.md
+++ b/changelog_unreleased/typescript/pr-7228.md
@@ -1,5 +1,6 @@
-#### Fix printing index signatures without type annotations ([#7228](https://github.com/prettier/prettier/pull/7228) by [@cola119](https://github.com/cola119))
+#### Fix printing both index signatures without type annotations and multi-parameter index signatures ([#7228](https://github.com/prettier/prettier/pull/7228) by [@cola119](https://github.com/cola119))
 
+index signatures without type annotations
 <!-- prettier-ignore -->
 ```ts
 // Input
@@ -8,4 +9,21 @@ type A = { [key: string] };
 type A = { [key: string]: };
 // Prettier master
 type A = { [key: string] };
+```
+
+multi-parameter index signatures
+<!-- prettier-ignore -->
+```ts
+// Input
+type B = {
+  [a: string, b: string]: string;
+};
+// Prettier stable
+type B = {
+  [a: stringb: string]: string;
+};
+// Prettier master
+type B = {
+  [a: string, b: string]: string;
+};
 ```
