--- a/changelog_unreleased/typescript/pr-7174.md
+++ b/changelog_unreleased/typescript/pr-7174.md
@@ -1,4 +1,4 @@
-#### Fix adding unnecessary colons on Mapped Types ([#7221](https://github.com/prettier/prettier/pull/7221) by [@cola119](https://github.com/cola119))
+#### Fix printing of mapped types with the template type omitted ([#7221](https://github.com/prettier/prettier/pull/7221) by [@cola119](https://github.com/cola119))
 
 <!-- prettier-ignore -->
 ```ts
