Markdown: fix PR 7181 broke HTML blocks inside list items (#7220)
* fix PR 7181 broke HTML blocks inside list items

* add test for indented html after list item

* add changelog_unreleased for pr-7220

* update changelog of pr-7181

* fix pointed out

--- a/changelog_unreleased/markdown/pr-7181.md
+++ b/changelog_unreleased/markdown/pr-7181.md
@@ -1,4 +1,4 @@
-#### fix HTML formatting broken if the beginning tag starts after a list item ([#7181](https://github.com/prettier/prettier/pull/7181) by [@sasurau4](https://github.com/sasurau4))
+#### fix HTML formatting broken if the beginning tag starts after a list item ([#7181](https://github.com/prettier/prettier/pull/7181) by [@sasurau4](https://github.com/sasurau4), [#7220](https://github.com/prettier/prettier/pull/7220) by [@sasurau4](https://github.com/sasurau4))
 
 Previously, when Prettier format the html tag that starts after a list item, it would insert indent and break the relationship of open and close tag. Now, Prettier no longer change anything.
 
@@ -14,6 +14,9 @@ Previously, when Prettier format the html tag that starts after a list item, it 
 </p>
 </details>
 
+- A list item
+  <blockquote>asdf</blockquote>
+
 <!-- Prettier stable -->
 - A list item.
 
@@ -25,6 +28,9 @@ Previously, when Prettier format the html tag that starts after a list item, it 
 </p>
 </details>
 
+- A list item
+  <blockquote>asdf</blockquote>
+
 <!-- Prettier master -->
 - A list item.
 <details><summary>Summary</summary>
@@ -34,4 +40,7 @@ Previously, when Prettier format the html tag that starts after a list item, it 
 
 </p>
 </details>
+
+- A list item
+  <blockquote>asdf</blockquote>
 ```
