fix minor issues

--- a/changelog_unreleased/markdown/pr-7178.md
+++ b/changelog_unreleased/markdown/pr-7178.md
@@ -1,8 +1,8 @@
-#### Fix redundant leading spaces in markdown list ([#7178](https://github.com/prettier/prettier/pull/7178) by [@sasurau4](https://github.com/sasurau4))
+#### Fix redundant leading spaces in lists ([#7178](https://github.com/prettier/prettier/pull/7178) by [@sasurau4](https://github.com/sasurau4))
 
 <!-- prettier-ignore -->
 ```md
-// Input
+<!-- Input -->
 - a  
    b  
     c  
@@ -27,7 +27,7 @@
    d  
     e
 
-// Prettier stable
+<!-- Prettier stable -->
 - a  
    b  
    c  
@@ -52,7 +52,7 @@
     d  
     e
 
-// Prettier master
+<!-- Prettier master -->
 - a  
   b  
   c  
