Run `lint-docs` on changelogs

--- a/changelog_unreleased/javascript/pr-7140.md
+++ b/changelog_unreleased/javascript/pr-7140.md
@@ -1,5 +1,6 @@
 #### Fix moving semi for `return` to end of line-comment([#7140](https://github.com/prettier/prettier/pull/7140) by [@sosukesuzuki](https://github.com/sosukesuzuki))
 
+<!-- prettier-ignore -->
 ```js
 // Input
 return // comment
