--- a/changelog_unreleased/typescript/pr-7075.md
+++ b/changelog_unreleased/typescript/pr-7075.md
@@ -1,8 +1,8 @@
 #### Don't print trailing commas after rest elements in tuples ([#7075](https://github.com/prettier/prettier/pull/7075) by [@thorn](https://github.com/thorn0))
 
-* A rest element is always the last element of a tuple type. Nothing can be added after it.
-* While TS is okay with this comma, [Babel doesn't parse it](https://github.com/babel/babel/issues/10769)
-* In function parameters and array destructuring, such a comma is a syntax error. Keeping it in tuples is inconsistent.
+- A rest element is always the last element of a tuple type. Nothing can be added after it.
+- While TS is okay with this comma, [Babel doesn't parse it](https://github.com/babel/babel/issues/10769)
+- In function parameters and array destructuring, such a comma is a syntax error. Keeping it in tuples is inconsistent.
 
 <!-- prettier-ignore -->
 ```jsx
