--- a/changelog_unreleased/vue/pr-7180.md
+++ b/changelog_unreleased/vue/pr-7180.md
@@ -1,5 +1,6 @@
 #### format vue SFC containing JSX script([#7180](https://github.com/prettier/prettier/pull/7180) by [@sosukesuzuki](https://github.com/sosukesuzuki))
 
+<!-- prettier-ignore -->
 ```html
 <!-- Input -->
 <script lang="jsx">
