--- a/changelog_unreleased/html/pr-7273.md
+++ b/changelog_unreleased/html/pr-7273.md
@@ -1,29 +1,29 @@
-#### Fix HTML elements inside unknown namespace element ([#7273](https://github.com/prettier/prettier/pull/7273) by [@fisker](https://github.com/fisker))
+#### Fix HTML elements with colon ([#7273](https://github.com/prettier/prettier/pull/7273) by [@fisker](https://github.com/fisker))
 
-Treat unknown namespace element as block, and HTML elements as it is.
+Treat elements with colon as block, and normal elements inside as it is.
 
 <!-- prettier-ignore -->
 ```html
 <!-- Input -->
-<unknow:namespace>
-  <div> block block block </div><div> block block block </div><div> block block block </div><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><html:button> known inline</html:button></unknow:namespace>
+<with:colon>
+  <div> block block block </div><div> block block block </div><div> block block block </div><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><html:button> known inline</html:button></with:colon>
 
 <!-- Prettier stable -->
-<unknow:namespace>
+<with:colon>
   <div> block block block </div><div> block block block </div
   ><div> block block block </div><span> inline inline </span
   ><span> inline inline </span><span> inline inline </span
   ><span> inline inline </span
-  ><html:button> known inline</html:button></unknow:namespace
+  ><html:button> known inline</html:button></with:colon
 >
 
 <!-- Prettier master -->
-<unknow:namespace>
+<with:colon>
   <div>block block block</div>
   <div>block block block</div>
   <div>block block block</div>
   <span> inline inline </span><span> inline inline </span
   ><span> inline inline </span><span> inline inline </span
   ><html:button> known inline</html:button>
-</unknow:namespace>
+</with:colon>
 ```
